--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     border-radius: 10px;
     margin-right: 20px; 
     background-color: rgb(74, 109, 74);
-    color: black; /* Changed font color to black */
+    color: black; 
   }
 
   form fieldset {
@@ -53,7 +53,7 @@
   label {
     width: 100px;
     margin-right: 10px; 
-    color: black; /* Changed font color to black */
+    color: black; 
   }
 
   input[type="text"],
@@ -68,7 +68,7 @@
     border: 1px solid #ccc;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
-    color: black; /* Changed font color to black */
+    color: black; 
   }
 
   .checkbox-container {
@@ -79,7 +79,7 @@
 
   .checkbox-container label {
     margin-left: 5px; 
-    color: black; /* Changed font color to black */
+    color: black; 
   }
 
   button {
@@ -111,7 +111,7 @@
     padding: 20px;
     border: 2px solid black;
     border-radius: 10px;
-    background-color: black;
+    background-color: rgb(74, 109, 74);
     color: white;
   }
 
