--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     margin-top: 20px;
     width: 400px;
     padding: 20px;
-    border: 2px solid black;
+    border: 2px solid rgb(47, 74, 47);
     border-radius: 10px;
     background-color: rgb(74, 109, 74);
     color: white;
